crates/plotnik-tests/tests/04-emit/types/captures/builtin_does_not_hide_custom_name_error.txt
Q = (program
  {
    {
      (comment) @comment
    } @inner :: Q
  } @outer :: str
)
------------------ DIAGNOSTICS -------------------
error: type name `Q` is already used for a different type
 --> query.ptk:5:17
  |
1 | Q = (program
  | - already used here
...
5 |     } @inner :: Q
  |                 ^
